trying to fix some spacing

--- a/src/app/common/components/ExpandableView.less
+++ b/src/app/common/components/ExpandableView.less
@@ -8,6 +8,20 @@
     align-items: center;
   }
 
+  .expandable-view-arrow-column {
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .expandable-view-arrow-spacer-top {
+    flex: 1;
+  }
+
+  .expandable-view-arrow-spacer-bottom {
+    flex: 1;
+  }
+
   .expandable-view-arrow-icon {
     position: relative;
     padding: 0px @half-spacing;
